Added soe hangwoman stuff to views, url, html, css

--- a/games/static/games/style.css
+++ b/games/static/games/style.css
@@ -1,8 +1,10 @@
+/* Set header text to white */
 #header a
 {
-    color: green;
+    color: #ffffff;
 }
 
+/* Some formatting of the home and about-me buttons */
 #header ul
 {
     list-style-type: none;
@@ -10,28 +12,31 @@
     padding: 0;
     text-align: right;
 }
-
 #header li
 {
     display: inline;
 }
 
+/* :link selector to style links to unvisited pages, the :visited selector to style links to visited pages, and the :hover selector to style links when you mouse over them */
 #header a:link, a:visited
 {
     width: 60px;
-    font-weight: bold;
-    background-color: #98bf21;
+    font-weight: normal;
+    background-color: #075E73;
     text-align: center;
-    padding: 2px;
+    padding: 4px;
     text-decoration: none;
     text-transform: uppercase;
 }
 
+/* When user hovers or clicks on the home or about-me button, do this to the buttons */
+/* Note: :active MUST come after :hover (if present) in the CSS definition in order to be effective */
 #header a:hover, a:active
 {
-    background-color: #7A991A;
+    background-color: #013743;
 }
 
+/* content margin from the top */
 #content
 {
     margin-top: 15px;
@@ -49,10 +54,93 @@
 
 body
 {
-    background-color: #FFFFCC;
+    background-color: #3B3738;
 }
 
-#page-wrap {
-    width: 800px;
+/* Wrap the page in the middle */
+#pageWrap
+{
+    width: 900px;
     margin: 0 auto;
 }
+
+/* Format page heading "Games" */
+#pageHeading
+{
+    text-align: center;
+    color: #C63D0F;
+    font-size: 500%;
+    font-family: "Lucida Console", Monaco, monospace
+}
+
+/* Format about me page */
+#aboutMe
+{
+    font-size: 150%;
+    font-family: "Lucida Console", Monaco, monospace
+}
+
+/* Game select buttons*/
+body
+{
+    font-family: Calibri;
+    text-align: center;
+}
+
+#button
+{
+    display: inline-block;
+    margin: 1em 0 0 0;
+    padding: 0.4em 2em;
+    font-size: 1.6em;
+    background: rgba(255,255,255,0.07);
+    color: rgba(0,0,0,0.7);
+    text-shadow: 1px 1px 0 rgba(255,255,255,0.1);
+    text-decoration: none;
+    border: solid 1px rgba(20,20,20,1);
+    border-radius: 10px;
+    box-shadow: inset 1px 1px 1px rgba(255,255,255,0.05), inset 0 0 35px rgba(0,0,0,0.6), 0 5px 5px -4px rgba(0,0,0,0.8);
+}
+
+#button:hover
+{
+    background: rgba(255,255,255,0.09);
+}
+
+/* When user clicks on the game button, do this to the button */
+#button:active
+{
+    position: relative;
+    top: 5px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.4), inset 0 0 35px rgba(0,0,0,0.6), 0 1px 1px rgba(255,255,255,0.1), inset 0 6px 4px rgba(0,0,0,0.4);
+}
+
+/* Make the hangwoman button text bold */
+#button.hangwoman
+{
+    font-weight: bold;
+}
+
+/* Make the text for new game button italic */
+#button.newGame
+{
+    font-style: italic;
+}
+
+/* Format the heading of Hangwoman page */
+#hangwoman
+{
+    text-align: center;
+    color: #C63D0F;
+    font-size: 200%;
+    font-family: "Lucida Console", Monaco, monospace
+}
+
+/* Format the canvas */
+canvas
+{
+    background: #eee;
+    display: block;
+    margin: 0 auto;
+}
+
