--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="page-wrap">
+    <div id="pageWrap">
         <div id="header">
             {% block header %}{% endblock header %}
         </div>
