--- a/games/templates/games/hangwoman.html
+++ b/games/templates/games/hangwoman.html
@@ -10,8 +10,11 @@
 {% endblock header %}
 
 {% block content %}
-<br>
-<br>
-<p id="aboutMe">Name:  Deep Aggarwal</p>
-<p id="aboutMe">Email: deep.uiuc@gmail.com</p>
+<p id="hangwoman">Hangwoman</p>
+<canvas id="myCanvas" width="924" height="512"></canvas>
+
+<script>
+    //script// JavaScript code goes here
+</script>
+
 {% endblock content %}
