--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -10,7 +10,9 @@
 {% endblock header %}
 
 {% block content %}
-<p> Hi, Here are some fun games.</p>
+<p id="pageHeading">Games</p>
+<a href="/games/hangwoman" id="button" class="hangwoman"">Hangwoman</a>
+<a href="/games/aboutMe" id="button" class="newGame">New game coming soon ...</a>
 {% endblock content %}
 
 
