--- a/games/templates/games/hangwoman.html
+++ b/games/templates/games/hangwoman.html
@@ -11,10 +11,108 @@
 
 {% block content %}
 <p id="hangwoman">Hangwoman</p>
-<canvas id="myCanvas" width="924" height="512"></canvas>
+<canvas id="gameCanvas" width="924" height="512"></canvas>
 
 <script>
-    //script// JavaScript code goes here
+    //Get the reference to the <canvas> element
+    var canvas = document.getElementById("gameCanvas");
+
+    //Create the ctx variable to store the 2D rendering context — the actual tool we can use to paint on the Canvas
+    var ctx = canvas.getContext("2d");
+
+    //var stickFigureParts = [];
+    ctx.beginPath();
+    ctx.rect(20, 30, 10, 80);
+    ctx.fillStyle = "#FF0000";
+    ctx.fill();
+    ctx.closePath();
+
+    //Left leg of stand
+    ctx.beginPath();
+    ctx.moveTo(550, 450);
+    ctx.lineTo(630, 400);
+    ctx.lineWidth = 5;
+    ctx.strokeStyle = '#ff0000';
+    ctx.stroke();
+
+    //Right leg of stand
+    ctx.beginPath();
+    ctx.moveTo(710, 450);
+    ctx.lineTo(630, 400);
+    ctx.lineWidth = 5;
+    ctx.strokeStyle = '#ff0000';
+    ctx.stroke();
+
+    //Vertical bar of stand
+    ctx.beginPath();
+    ctx.moveTo(630, 70);
+    ctx.lineTo(630, 400);
+    ctx.lineWidth = 5;
+    ctx.strokeStyle = '#ff0000';
+    ctx.stroke();
+
+    //Horizontal bar of stand
+    ctx.beginPath();
+    ctx.moveTo(630, 70);
+    ctx.lineTo(790, 70);
+    ctx.lineWidth = 5;
+    ctx.strokeStyle = '#ff0000';
+    ctx.stroke();
+
+    //Short vertical bar of stand
+    ctx.beginPath();
+    ctx.moveTo(790, 70);
+    ctx.lineTo(790, 130);
+    ctx.lineWidth = 5;
+    ctx.strokeStyle = '#ff0000';
+    ctx.stroke();
+
+    //Woman's face outer
+    ctx.beginPath();
+    ctx.arc(790,160,30,0,2*Math.PI);
+    ctx.stroke();
+
+    //Woman's middle part
+    ctx.beginPath();
+    ctx.arc(790,272,80,0,2*Math.PI);
+    ctx.stroke();
+
+    //Woman's hair TODO
+    ctx.beginPath();
+    ctx.arc(240, 160, 20, 0, Math.PI*2, false);
+    ctx.fillStyle = "green";
+    ctx.fill();
+    ctx.closePath();
+
+
+    function drawEllipse(centerX, centerY, width, height)
+    {
+        ctx.beginPath();
+
+        ctx.moveTo(centerX, centerY - height/2);
+
+        ctx.bezierCurveTo(
+        centerX + width/2, centerY - height/2,
+        centerX + width/2, centerY + height/2,
+        centerX, centerY + height/2);
+
+        ctx.bezierCurveTo(
+        centerX - width/2, centerY + height/2,
+        centerX - width/2, centerY - height/2,
+        centerX, centerY - height/2);
+
+        ctx.fillStyle = "black";
+        ctx.fill();
+        ctx.closePath();
+    }
+
+    function redraw()
+    {
+        drawEllipse(47, 68, 8, 14); // Left Eye
+        drawEllipse(98, 68, 8, 14); // Right Eye
+    }
+    redraw();
+
 </script>
 
 {% endblock content %}
