updated views.py with filing database and added hangwoman stuff

--- a/games/static/games/style.css
+++ b/games/static/games/style.css
@@ -139,7 +139,7 @@ body
 /* Format the canvas */
 canvas
 {
-    background: #eee;
+    background: #000000;
     display: block;
     margin: 0 auto;
 }
