--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -12,5 +12,6 @@
 {% block content %}
     <p id="pageHeading">Games</p>
     <a href="/games/hangwoman" id="button" class="hangwoman"">Hangwoman</a>
-    <a href="/games/aboutMe" id="button" class="newGame">more coming soon ...</a>
+    {# <a href="/games/aboutMe" id="button" class="newGame">more coming soon ...</a> #}
+    <a href="/games/fillDatabase" id="button" class="newGame">more coming soon ...</a>
 {% endblock content %}
