pretty advance features added

--- a/games/templates/games/about.html
+++ b/games/templates/games/about.html
@@ -12,6 +12,9 @@
 {% block content %}
     <br>
     <br>
-    <p id="aboutMe">Name:  Deep Aggarwal</p>
-    <p id="aboutMe">Email: deep.uiuc@gmail.com</p>
+    <div id="aboutMe">
+        <p id="name">Name:  Deep Aggarwal</p>
+        <p id="email">Email: deep.uiuc@gmail.com</p>
+        <p id="sourceCode">Source Code: <a href="https://github.com/deep4788/onlineGames" target="_blank">Available on my GitHub</a></p>
+    </div>
 {% endblock content %}
