--- a/games/static/games/style.css
+++ b/games/static/games/style.css
@@ -74,8 +74,21 @@ body
 }
 
 /* Format about me page */
-#aboutMe
+#aboutMe #name
 {
+    text-align: left;
+    font-size: 150%;
+    font-family: "Lucida Console", Monaco, monospace
+}
+#aboutMe #email
+{
+    text-align: left;
+    font-size: 150%;
+    font-family: "Lucida Console", Monaco, monospace
+}
+#aboutMe #sourceCode
+{
+    text-align: left;
     font-size: 150%;
     font-family: "Lucida Console", Monaco, monospace
 }
@@ -143,4 +156,3 @@ canvas
     display: block;
     margin: 0 auto;
 }
-
