updated hangwoman.html and base.html

--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -5,6 +5,7 @@
 <head>
     <link rel="shortcut icon" href="{% static 'games/images/favicon.ico' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'games/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'games/hangwoman.css' %}" />
     <title>{% block title %}Fun Games{% endblock title %}</title>
 </head>
 
