--- a/games/templates/games/hangwoman.html
+++ b/games/templates/games/hangwoman.html
@@ -44,7 +44,7 @@
                 {% endautoescape %}
             {% endfor %}
         </script>
-        <script type="text/javascript" src="{% static 'games/hang.js' %}"></script>
+        <script type="text/javascript" src="{% static 'games/hangwoman.js' %}"></script>
     {% endif %}
 
 {% endblock content %}
